Bio name spacing issues

--- a/css/common.css
+++ b/css/common.css
@@ -10,6 +10,10 @@ a {
 
 }
 
+.bio-med-name {
+line-height: .8;
+}
+
 .bio-hr {
   width: 10%;
   border: 0;
